# oxli

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/: ruff.yml
.github/workflows/: CI.yml  lint.yml  pytest.yml  ruff.yml
doc/: api.md  example.fa
src/: lib.rs
src/python/tests/: test_add.py  test_attr.py  test_basic.py  test_canonicalization.py  test_dump.py  test_dunders.py  test_histo.py  test_kmer_map.py  test_kmers_and_hashes.py  test_metrics.py  test_output.py  test_parallel_consume.py  test_remove.py  test_serialization.py  test_setops.py
