[package]
name = "oxli"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxli"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.97"
env_logger = "0.11.6"
log = "0.4.26"
niffler = "3.0.0"
pyo3 = { version="0.23.5", features = ["extension-module", "anyhow"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.135"
sourmash = "0.17.2"