[package]
name = "oxli"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxli"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
log = "0.4.29"
niffler = "3.0.0"
pyo3 = { version="0.27.2", features = ["extension-module", "anyhow"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sourmash = "0.21.0"

